<resources>
    <string name="app_name">App zur Aussagenlogik</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>
    <string name="negative">\u00AC</string>
    <string name="or">\u22C1</string>
    <string name="and">\u2227</string>
    <string name="toArrow">\u2192</string>
    <string name="leftRightArrow">\u2194</string>
    <string name="delete">\u232B</string>
    <string name="enter">\u23CE</string>
    <string name="oneBack">\u21E4</string>
    <string name="history">\u27F3</string>
    <string name="solution"></string>
    <string name="input"></string>
    <string name="inputPlaceholder">Bitte geben Sie eine Formel ein.</string>
    <string name="solutionPlaceholder">Lösung</string>
    <string name="ca">ce</string>
    <string name="anleitung">Anleitung</string>
    <string name="aboutUs">Über uns</string>
    <string name="historyMenu">Verlauf</string>
    <string name="homeSymbol">\u2302</string>
    <string name="text_Introduction">Auf dieser Seite wird kurz beschrieben, wie die App aufgebaut
        ist und wie sie bedient wird.
        \n\n<b>Auswahl der Rechenart:</b>
        \nÜber die Reiter am oberen Bildschirmrand können die unterschiedlichen Rechenarten
            ausgewählt werden.
        \n\n<b>Tastatur:</b>
        \nDie Tastatur verfügt zum einen über die herkömmlich Zeichen der Aussagenlogik. Zum anderen
    gibt es zusätzliche Buttons, welche die Bedienung vereinfachen sollen.\n
    - <b>\u232B:</b> Löschen einzelner Zeichen vor dem Cursor.\n
    - <b>ce:</b> Löschen der kompletten Formeleingabe/n.\n
    - <b>\u23CE:</b> Bestätigen der Formel, um die Lösung zu erhalten.\n
    - <b>\u21E4:</b> Im gespeicherten Verlauf eine Formel nach hinten gehen.\n
    - <b>Rechenweg:</b> Nach Bestätigung der Formel, kann hierüber ein genauerer Rechenweg angezeigt werden.
    \n\n<b>Menü:</b>
    \n- <b>About us:</b> Kurzinformation über die Ersteller dieser App.\n
    - <b>Anleitung:</b> Ja, Sie haben hierher gefunden!\n
    - <b>Verlauf:</b> Hier werden die letzten eingegebenen 50 Formel mit Ergebnissen gespeichert.
    Beim Draufdrücken auf die Zeile, springt die App in die richtige Rechenart, Formel und dessen Ergebnis.\n</string>
    <string name="text_about_us">Wir sind eine Gruppe von Studenten an der DHBW Ravensburg,
        die im Zuge eines Projekts diese App zur Aussagenlogik entwickelt hat.
        \n\nWir wünschen Ihnen viel Spaß und ein tolles App-Erlebnis!</string>


</resources>