<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button6"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a" />

            <Button
                android:id="@+id/button7"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b" />

            <Button
                android:id="@+id/button8"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c" />

            <Button
                android:id="@+id/button22"
                style="@style/ButtonFontSpecialChar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button9"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d" />

            <Button
                android:id="@+id/button10"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e" />

            <Button
                android:id="@+id/button11"
                style="@style/ButtonFontSpecialChar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/negative" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button14"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and" />

            <Button
                android:id="@+id/button15"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or" />

            <Button
                android:id="@+id/button16"
                style="@style/ButtonFontSpecialChar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toArrow" />

            <Button
                android:id="@+id/button17"
                style="@style/ButtonFontSpecialChar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button18"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(" />

            <Button
                android:id="@+id/button19"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=")" />

            <Button
                android:id="@+id/button20"
                style="@style/ButtonFontSpecialChar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leftRightArrow" />

        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>