<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MainFragment"
    android:id="@+id/fragment_main"
    android:background="#CCFFFF">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DNF" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="KNF" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resolu-tion" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2 For-\nmeln" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tab-\nleaux" />

    </com.google.android.material.tabs.TabLayout>


    <Button
        android:id="@+id/buttonRechenweg"
        style="@style/ButtonFontStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:text="Rechenweg"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557" />

    <TextView
        android:id="@+id/textIhreFormel"
        android:layout_width="202dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:autoText="false"
        android:text="Ihre Formel"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="101dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:digits="abcde\u00AC\u22C1\u2227\u2192\u2194\u232B\u23CE"
        android:ems="10"
        android:hint="@string/inputPlaceholder"
        android:inputType="text"
        android:text="@string/input"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <TextView
        android:id="@+id/textIhreFormelErgebnis"
        android:layout_width="202dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:autoText="false"
        android:text="Lösung"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/solution"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input" />


    <EditText
        android:id="@+id/solution"
        android:layout_width="0dp"
        android:layout_height="79dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/solutionPlaceholder"
        android:inputType="textPersonName"
        android:text="@string/solution"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonA"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a" />

            <!--   style="@style/ButtonFontSpecialChar" -->

            <Button
                android:id="@+id/buttonB"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b" />

            <Button
                android:id="@+id/buttonC"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c" />

            <Button
                android:id="@+id/buttonDelete"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonD"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d" />

            <Button
                android:id="@+id/buttonE"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e" />

            <Button
                android:id="@+id/buttonNegation"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/negative" />

            <Button
                android:id="@+id/buttonCE"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ca" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonAnd"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and" />

            <Button
                android:id="@+id/buttonOr"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or" />

            <Button
                android:id="@+id/buttonImplikation"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toArrow" />

            <Button
                android:id="@+id/buttonReturn"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonKlammerAuf"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(" />

            <Button
                android:id="@+id/buttonKlammerZu"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=")" />

            <Button
                android:id="@+id/buttonImplikationBeidseitig"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leftRightArrow" />

            <Button
                android:id="@+id/buttonOneBack"
                style="@style/ButtonFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oneBack" />

        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>